# rl_deploy

./: .gitattributes  .gitignore  pyproject.toml
hil-serl/serl_robot_infra/: README.md
moqi_workspace/IK/: collision_check.py
moqi_workspace/openarm/: readme.txt  test_right_arm_joints.py
moqi_workspace/pyroki/: main_v4.py  realsense_camera.py  record_demo_rl.py
moqi_workspace/rl_deploy/: ARCHITECTURE_ANALYSIS.md  REFACTOR_PLAN.md  eval_bc_standalone.py  openarm_env.py  openarm_server.py  pick_place_demo_utils.py  run_actor.sh  run_actor_2stage.sh  run_actor_3_2stage.sh  run_bc_eval_gpu.sh  run_bc_eval_standalone.sh  run_bc_train_gpu.sh  run_bc_train_standalone.sh  run_eval.sh  run_eval_2stage.sh  run_eval_3_2stage.sh  run_learner.sh  run_learner_2stage.sh  run_learner_3_2stage.sh  train.py  train_bc_standalone.py  train_pick_place.py  train_pick_place_2.py  train_pick_place_3.py  train_pick_place_bc_gpu.py
rl-serl/: .gitignore  README.md  plan.md  requirements-optional.txt  requirements.txt
rl-serl/docs/: BC_WARMUP_GUIDE.md  NETWORK_MIGRATION.md  OPENARM_CAN_MIGRATION.md  OPENARM_HARDWARE_MOQI_MIGRATION_ANALYSIS.md  debug.MD
rl-serl/examples/: bc_utils.py  compat.py  data_contract.py  eval_bc_offline.py  eval_bc_real.py  eval_reward_classifier.py  project_paths.py  record_demos.py  train_bc.py  train_reward_classifier.py  train_rlpd.py
rl-serl/rl_launcher/: setup.py
rl-serl/rl_robot_infra/: setup.py
rl-serl/scripts/: build_openarm_can.sh  check_openarm_can_bus.py  check_openarm_can_import.py  configure_openarm_socketcan.sh  test_data_contract.py  (+2 more)
(+112 files in other folders)
